# ha-sauron

./: .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  hacs.json  pyproject.toml  release-please-config.json
.github/workflows/: validate.yml
custom_components/sauron/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  strings.json
custom_components/sauron/api/: __init__.py  client.py  exceptions.py  models.py
custom_components/sauron/translations/: de.json  en.json  es.json  fr.json
docs/: RESUME.md
docs/plans/: PLAN-A-token-persistence.md
lovelace_examples/: water_dashboard.yaml
tests/: conftest.py  test_coordinator_exception_mapping.py  test_coordinator_parse.py  test_init_token_cache.py
tests/api/: test_client.py  test_models.py
