[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = [
    "custom_components.sauron.api",
    "custom_components.sauron.coordinator",
    "custom_components.sauron",
]
omit = [
    # Entity / sensor layer is best covered by HA integration tests in core;
    # unit testing it here would require pytest-homeassistant-custom-component.
    "custom_components/sauron/sensor.py",
    "custom_components/sauron/entity.py",
    # Config flow exercises HA's flow manager — also best left to integration tests.
    "custom_components/sauron/config_flow.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF", "TCH"]
ignore = ["RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ha-sauron"
version = "0.4.1"
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.9.0"]
